--- a/my_first_app/src/index.css
+++ b/my_first_app/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url("background.jpg");
+  background-size: cover;
 }
 
 code {
@@ -13,11 +16,11 @@ code {
 }
 
 .heading{
-  color: maroon;
+  color: #ffffff;
   text-align: center;
   text-transform: capitalize;
   font-weight: bold;
-  text-shadow: 0px 2px 4px purple;
+  text-shadow: 0px 2px 2px #4285F4;
 }
 
 .img_div{
@@ -29,4 +32,17 @@ code {
   width: 200px;
   height: 300px;
   margin: auto;
+}
+
+.center_text{
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+}
+
+.time_text{
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  font-size: 400%;
 }
