--- a/my_first_app/src/index.css
+++ b/my_first_app/src/index.css
@@ -6,8 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  /*
   background-image: url("background.jpg");
+  */
+  background-image: url("https://picsum.photos/1366/768");
   background-size: cover;
+
+  text-shadow: 0px 2px 2px #000000;
 }
 
 code {
@@ -20,7 +25,7 @@ code {
   text-align: center;
   text-transform: capitalize;
   font-weight: bold;
-  text-shadow: 0px 2px 2px #4285F4;
+  text-shadow: 0px 2px 2px #000000;
 }
 
 .img_div{
@@ -38,6 +43,7 @@ code {
   color: #ffffff;
   display: flex;
   justify-content: center;
+  text-shadow: 0px 2px 2px #000000;
 }
 
 .time_text{
@@ -45,4 +51,11 @@ code {
   display: flex;
   justify-content: center;
   font-size: 400%;
+  text-shadow: 0px 2px 2px #000000;
+}
+
+.boxed {
+  /*
+  border: 1px solid green ;
+  */
 }
