--- a/my_first_app/src/index.css
+++ b/my_first_app/src/index.css
@@ -52,10 +52,19 @@ code {
   justify-content: center;
   font-size: 400%;
   text-shadow: 0px 2px 2px #000000;
+  opacity: 100% !important;
 }
 
-.boxed {
-  /*
-  border: 1px solid green ;
-  */
+.time_box {
+  background-color: rgba(168, 168, 168, 0.5);
+  color: white;
+  padding: 5px;
+  width: 400px;
+  height: 80px;
+  border-radius: 15px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
 }
