--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ code {
 }
 
 .time_box {
-  background-color: rgba(168, 168, 168, 0.5);
+  background-color: rgba(168, 168, 168);
   color: white;
   padding: 5px;
   width: 400px;
