--- a/src/index.css
+++ b/src/index.css
@@ -54,9 +54,9 @@ code {
   text-shadow: 0px 2px 2px #000000;
   opacity: 100% !important;
 }
-
+/*
 .time_box {
-  background-color: rgba(168, 168, 168);
+  background-color: rgba(168, 168, 168, 0.5);
   color: white;
   padding: 5px;
   width: 400px;
@@ -68,3 +68,4 @@ code {
   margin-left: auto;
   margin-right: auto;
 }
+*/
